--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
 
     <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0"/>-->
     <script src="https://use.fontawesome.com/bf0cb5a408.js"></script>
 </head>
 
 <body>
     <!-- Navbar -->
+    <div class="navbar-fixed">
     <nav class="grey darken-4">
         <div class="nav-wrapper">
             <a href="#" class="brand-logo center">WebVR India</a>
-            <ul class="right">
+            <ul id="nav-mobile" class="right  hide-on-med-and-down">
                 <li><a href="#" target="_blank"><i class="fa fa-2x fa-facebook-square" aria-hidden="true"></i></a></li><!-- Facebook -->
                 <li><a href="#"><i class="fa fa-2x fa-twitter" aria-hidden="true"></i></a></li><!-- Twitter -->
                 <li><a href="#" target="_blank"><i class="fa fa-2x fa-github" aria-hidden="true"></i></a></li><!-- Github -->
@@ -25,10 +26,11 @@
             </ul>
         </div>
     </nav>
+    </div>
     <!--Best VR Scene use good background image-->
 
     <div class="row">
-    <div class="col m12">
+    <div class="col m12 s12">
         <div class="card blue-grey darken-1 center">
             <div class="card-content white-text">
                 <span class="card-title"><a class="waves-effect waves-light btn">Best VR Scene</a></span>
