added twitter link

--- a/index.html
+++ b/index.html
@@ -54,16 +54,17 @@
         </ul>
         </div>
         <div class="col m6">
-            <h3> What is WebVR ? </h3>
+            <h3>What is WebVR?</h3>
             <p>WebVR is a JavaScript API for creating immersive 3D, Virtual Reality experiences in your browser.</p>
             <!-- Embed video -->
-            <iframe width="568" height="318" src="https://www.youtube.com/embed/Le8pTXQqM3s" frameborder="0" allowfullscreen></iframe>
+            <div class="video-container">
+                <iframe width="568" height="318" src="//www.youtube.com/embed/Le8pTXQqM3s?rel=0" frameborder="0" allowfullscreen></iframe>
+            </div>
         </div>
         <div class="col m3">
-            <h3>Latest Updates</h3>
-            <div>
-                <!--Embed twitter code for fetching hashtag -->
-            </div>
+            <a class="twitter-timeline"  href="https://twitter.com/hashtag/webVRIndia" data-widget-id="855890552650211328">#webVRIndia Tweets</a>
+            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+          
         </div>
 
     </div>
