--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
     <!--Best VR Scene use good background image-->
 
-    <div class="row">
+    <!--<div class="row">
     <div class="col m12 s12">
         <div class="card blue-grey darken-1 center">
             <div class="card-content white-text">
@@ -39,11 +39,11 @@
             </div>
         </div>
     </div>
-    </div>
+    </div>-->
 
     <div class="row">
         <div class="col m3">
-        <ul class="side-nav fixed" style="top:220px;">
+        <ul class="side-nav fixed" style="top:64px;">
             <li class="bold"><a href="#" class="waves-effect waves-teal">Home</a></li>
             <li class="bold"><a href="getting-started.html" class="waves-effect waves-teal">Getting Started</a></li>
             <li class="bold"><a href="community.html" class="waves-effect waves-teal">Community</a></li>
