added getting-started page

--- a/getting-started.html
+++ b/getting-started.html
@@ -10,22 +10,48 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>   
 </head>
 <body>
-	<div class="container">
-		<h1>Getting Started</h1>
-		<div class="row">
-			<div class="col m12">
-				<h2>HW and SW certification</h2>
-				<p>If you're using an Oculus Rift or HTC Vive, you may need to install Firefox Nightly or experimental Chromium builds. See the current status of your browser at <a href="https://iswebvrready.org/" target="_blank">Is WebVR Ready</a>?
-				</p>
-			</div>
-			<div class="col m12">
-				<h2>Little Background</h2>
-				<p> A frame JS-A-Frame is an open-source WebVR framework for creating virtual reality (VR) experiences with HTML. We can build VR scenes that work across smartphones, desktop, the Oculus Rift, and the room-scale HTC Vive.</p>
-				<p>Three.js - Three.js is a cross-browser JavaScript library/API used to create and display animated 3D computer graphics in a web browser. Three.js uses WebGL.</p>
-			</div>
-		</div>
-	</div>
-    <!--Import jQuery before materialize.js-->
+	<div class="navbar-fixed">
+    <nav class="grey darken-4">
+        <div class="nav-wrapper">
+            <a href="#" class="brand-logo center">WebVR India</a>
+            <ul id="nav-mobile" class="right  hide-on-med-and-down">
+                <li><a href="#" target="_blank"><i class="fa fa-2x fa-facebook-square" aria-hidden="true"></i></a></li><!-- Facebook -->
+                <li><a href="#"><i class="fa fa-2x fa-twitter" aria-hidden="true"></i></a></li><!-- Twitter -->
+                <li><a href="#" target="_blank"><i class="fa fa-2x fa-github" aria-hidden="true"></i></a></li><!-- Github -->
+                <li><a href="#" target="_blank"><i class="fa fa-2x fa-slack" aria-hidden="true"></i></a></li><!-- Slack -->
+                <li><a href="#" target="_blank"><i class="fa fa-2x fa-envelope" aria-hidden="true"></i></a></li><!-- Gmail -->
+            </ul>
+        </div>
+    </nav>
+    </div>
+    <div class="row">
+        <div class="col m3">
+        <ul class="side-nav fixed" style="top:64px;">
+            <li class="bold"><a href="#" class="waves-effect waves-teal">Home</a></li>
+            <li class="bold"><a href="getting-started.html" class="waves-effect waves-teal">Getting Started</a></li>
+            <li class="bold"><a href="community.html" class="waves-effect waves-teal">Community</a></li>
+            <li class="bold"><a href="tools.html" class="waves-effect waves-teal">Tools</a></li>
+            <li class="bold"><a href="blog.html" class="waves-effect waves-teal">Blog</a></li>
+            <li class="bold"><a href="about.html" class="waves-effect waves-teal">About</a></li>
+            <li class="bold"><a href="scenes.html" class="waves-effect waves-teal">Scenes</a></li>
+        </ul>
+        </div>
+        <div class="col m9">
+      		<h1>Getting Started</h1>
+					<div class="row">
+						<div class="col m12">
+							<h2>HW and SW certification</h2>
+							<p>If you're using an Oculus Rift or HTC Vive, you may need to install Firefox Nightly or experimental Chromium builds. See the current status of your browser at <a href="https://iswebvrready.org/" target="_blank">Is WebVR Ready</a>?
+							</p>
+						</div>
+						<div class="col m12">
+							<h2>Little Background</h2>
+							<p> A frame JS-A-Frame is an open-source WebVR framework for creating virtual reality (VR) experiences with HTML. We can build VR scenes that work across smartphones, desktop, the Oculus Rift, and the room-scale HTC Vive.</p>
+							<p>Three.js - Three.js is a cross-browser JavaScript library/API used to create and display animated 3D computer graphics in a web browser. Three.js uses WebGL.</p>
+						</div>
+					</div>  	
+        </div>
+	  <!--Import jQuery before materialize.js-->
   <script type="text/javascript" src="js/jquery.min.js"></script>
   <script type="text/javascript" src="js/materialize.min.js"></script>
   <script src="https://use.fontawesome.com/bf0cb5a408.js"></script>
