added boilerplate content to all pages

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="row">
         <div class="col m3">
         <ul class="side-nav fixed" style="top:64px;">
-            <li class="bold"><a href="#" class="waves-effect waves-teal">Home</a></li>
+            <li class="bold"><a href="index.html" class="waves-effect waves-teal">Home</a></li>
             <li class="bold"><a href="getting-started.html" class="waves-effect waves-teal">Getting Started</a></li>
             <li class="bold"><a href="community.html" class="waves-effect waves-teal">Community</a></li>
             <li class="bold"><a href="tools.html" class="waves-effect waves-teal">Tools</a></li>
