--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-
+    <!-- favicon -->
+    <link rel="shortcut icon" href="webvr.ico" type="image/x-icon">
     <!--Let browser know website is optimized for mobile-->
     <!--<meta name="viewport" content="width=device-width, initial-scale=1.0"/>-->
     <script src="https://use.fontawesome.com/bf0cb5a408.js"></script>
