issue 20: partially fixed,added a sample of aframe scene from february reports

--- a/scenes.html
+++ b/scenes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Getting started with WebVR</title>
+	<title>Aframe Scenes</title>
 	<!--Import Google Icon Font-->
   <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!--Import materialize.css-->
@@ -35,6 +35,20 @@
             <li class="bold"><a href="about.html" class="waves-effect waves-teal">About</a></li>
             <li class="bold"><a href="scenes.html" class="waves-effect waves-teal">Scenes</a></li>
         </ul>
+        </div>
+        <div class="col m9">
+          <div class="row">
+            <div class="col m12">
+              <h1>Scenes of February-2017</h1>
+              <ul>
+                <li><h4>An Image Cube to play with From All Dimensions</h4></li>
+                <ul>
+                  <li>Developer: Ramya</li>
+                  <li>Link: <a href="http://ramya.pe.hu/upload/PhotoCube.html" target="_blank">http://ramya.pe.hu/upload/PhotoCube.html</a></li>
+                </ul>
+              </ul>
+            </div>
+          </div>
         </div>
     </div>
         
